Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci temporibus laudantium perspiciatis tempore sunt vitae mollitia voluptatem facere ex officiis repudiandae exercitationem doloribus, eligendi perferendis iusto excepturi cum necessitatibus molestias.</p>
+    
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe aliquam veniam architecto iste dolorem itaque, dignissimos a minus. Sed ea ex optio corporis magnam dolore alias ipsa? Temporibus, sapiente quas!</p>
 </body>
 </html>
